<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="180dp"
    android:layout_marginTop="10dp"
    android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/rl_editmember"
            android:layout_height="50dp">
            <com.example.wave.spectrumhuman.FONTS.TextViewFontStyle
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editprofile"
                android:textColor="#000000"
                android:id="@+id/txt_editProfile"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/rl_remove"
            android:layout_height="50dp">
            <com.example.wave.spectrumhuman.FONTS.TextViewFontStyle
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/removeprofile"
                android:textColor="#000000"
                android:id="@+id/txt_removeProfile"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/rl_cancel"
            android:layout_height="50dp">
            <com.example.wave.spectrumhuman.FONTS.TextViewFontStyle
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/colorthickred"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_centerVertical="true"
                android:id="@+id/txt_cancleProfile"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>
    </LinearLayout>
