<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:id="@+id/relativeadd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:id="@+id/rlone"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:background="@color/material_stepper">

            <com.example.wave.spectrumhuman.FONTS.TextViewFontStyle
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:text="@string/avilabledevices"
                android:id="@+id/avilabledevices"
                android:textSize="18sp" />


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rllist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rlone">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_mydevice"
                android:layout_width="fill_parent"
                android:layout_marginTop="30dp"
                android:layout_height="300dp"
                android:scrollbars="vertical" />
        </RelativeLayout>


        <com.example.wave.spectrumhuman.FONTS.ButtonFontStyle
            android:id="@+id/btn_adddevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="39dp"
            android:background="@drawable/ic_next_button"
            android:text="@string/adddevice"
            android:textAllCaps="false"
            android:visibility="gone"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_below="@id/toolbar">

        <com.example.wave.spectrumhuman.FONTS.TextViewFontStyle
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:id="@+id/foravilabledevices"

            android:text="@string/lookingforavilabledevices"
            android:textColor="#3a3a3a"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/image1"
            android:layout_width="70dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:animateLayoutChanges="true"
            android:background="@drawable/ic_spin" />

        <com.example.wave.spectrumhuman.FONTS.TextViewFontStyle
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="350dp"
            android:id="@+id/searching"

            android:text="@string/seacrching"
            android:textColor="#3a3a3a"
            android:textSize="18sp" />


    </RelativeLayout>


</RelativeLayout>