<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg1"
    android:clickable="true"
    android:focusableInTouchMode="true">
    <RelativeLayout
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="10dp">
        <com.example.wave.spectrumhuman.FONTS.ButtonFontStyle
            android:layout_width="23dp"
            android:id="@+id/home_button"
            android:background="@drawable/ic_home"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_height="23dp" />

        <ImageView
            android:id="@+id/imageview"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/appicon" />
    </RelativeLayout>

    <com.example.wave.spectrumhuman.FONTS.TextViewFontStyle
        android:id="@+id/changepasswordtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/changepassword"
        android:textColor="@color/colorwhite"
        android:textSize="20dp" />

    <ScrollView
        android:id="@+id/ScrollView_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:layout_below="@+id/changepasswordtext"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/l_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image"
                android:orientation="vertical">




                <RelativeLayout
                    android:id="@+id/rl_psw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="40dp">

                    <com.example.wave.spectrumhuman.FONTS.TextViewFontStyle
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:text="@string/oldpassword"
                        android:id="@+id/oldpasswordtext"
                        android:textColor="@color/colorwhite"
                        android:textSize="15sp" />


                    <com.example.wave.spectrumhuman.FONTS.EditTextFontStyle
                        android:id="@+id/edit_oldpassword"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:background="@android:color/transparent"
                        android:inputType="textPassword"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:textColor="@color/colorLighttext"
                        android:textColorHint="@color/colorwhite"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/chk"
                        android:button="@drawable/checkbox"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="5dp"
                        android:layout_width="30dp"
                        android:scaleX="0.70"
                        android:scaleY="0.70"
                        android:layout_marginTop="28dp"
                        android:layout_height="20dp" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="50dp"
                        android:background="@color/colorwhite" />

                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/rl_conformpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp">

                    <com.example.wave.spectrumhuman.FONTS.TextViewFontStyle
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/conformpassword"
                        android:text="@string/newpassword"
                        android:id="@+id/newpasswordtext"
                        android:textColor="@color/colorwhite"
                        android:textSize="15sp" />


                    <com.example.wave.spectrumhuman.FONTS.EditTextFontStyle
                        android:id="@+id/edit_newpassword"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:background="@android:color/transparent"
                        android:inputType="textPassword"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:textColor="@color/colorLighttext"
                        android:textColorHint="@color/colorwhite"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/chk1"
                        android:button="@drawable/checkbox"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="5dp"
                        android:layout_width="30dp"
                        android:scaleX="0.70"
                        android:scaleY="0.70"
                        android:layout_marginTop="28dp"
                        android:layout_height="20dp" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="50dp"
                        android:background="@color/colorwhite" />

                </RelativeLayout>




                <com.example.wave.spectrumhuman.FONTS.ButtonFontStyle
                    android:id="@+id/done"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_below="@+id/l2"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="100dp"
                    android:layout_marginRight="100dp"
                    android:layout_marginTop="60dp"
                    android:background="@drawable/cell_shape"
                    android:paddingBottom="2dp"
                    android:text="@string/done"
                    android:textAllCaps="false"
                    android:textColor="@color/colorwhite"
                    android:textSize="18sp" />



            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</RelativeLayout>
