<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">


        <RelativeLayout
            android:id="@+id/rlone"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/edit_cell">


            <com.example.wave.spectrumhuman.FONTS.TextViewFontStyle
                android:id="@+id/textname"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@color/colorthickblue"
                android:layout_centerVertical="true"
                android:text="@string/name"
                android:paddingTop="11dp"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                 />

            <com.example.wave.spectrumhuman.FONTS.EditTextFontStyle
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_toEndOf="@+id/textname"
                android:background="@android:color/transparent"
                android:paddingLeft="10dp"
                android:textSize="16sp"
                android:id="@+id/editname"
                android:singleLine="true" />


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rltwo"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/toolbar"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="110dp"
            android:background="@drawable/edit_cell">

            <com.example.wave.spectrumhuman.FONTS.TextViewFontStyle
                android:id="@+id/textemail"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@color/colorthickblue"
                android:paddingTop="11dp"
                android:textAlignment="center"
                android:text="@string/email"
                android:textColor="@color/colorWhite"
                 />

            <com.example.wave.spectrumhuman.FONTS.EditTextFontStyle
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/contactusemail"
                android:layout_alignParentRight="true"
                android:layout_toEndOf="@+id/textemail"
                android:background="@android:color/transparent"
                android:paddingLeft="10dp"
                android:textSize="16sp"
                android:singleLine="true" />


        </RelativeLayout>


        <ScrollView
            android:id="@+id/ScrollView_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/rltwo"
            android:baselineAligned="false"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/LinearLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rltwo"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/l_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rltwo"
                    android:orientation="vertical">


                    <RelativeLayout
                        android:id="@+id/rlthree"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/rltwo"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginTop="30dp">

                        <com.example.wave.spectrumhuman.FONTS.TextViewFontStyle
                            android:id="@+id/message"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/message"
                            android:textSize="18sp" />

                        <com.example.wave.spectrumhuman.FONTS.EditTextFontStyle
                            android:layout_width="match_parent"
                            android:layout_height="130dp"
                            android:layout_below="@id/message"
                            android:layout_marginTop="20dp"
                            android:background="#dbe1f1"
                            android:gravity="start"
                            android:inputType="text"
                            android:id="@+id/editmessage"
                            android:imeOptions="actionDone"
                            android:paddingLeft="3dp"
                            android:paddingTop="2dp"
                            android:scrollHorizontally="false"
                            android:scrollbars="vertical"/>

                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.example.wave.spectrumhuman.FONTS.ButtonFontStyle
                            android:id="@+id/submit"
                            android:layout_width="150dp"
                            android:layout_height="40dp"
                            android:background="@color/colorthickblue"
                            android:text="@string/submit"
                            android:layout_centerHorizontal="true"
                            android:textAllCaps="false"
                            android:layout_marginTop="50dp"
                            android:layout_alignParentBottom="true"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp" />

                    </RelativeLayout>

                </LinearLayout>


            </LinearLayout>
        </ScrollView>


    </RelativeLayout>

</RelativeLayout>
